Fix display of wheel event listeners on a page.

Fields were getting duplicated for scrollbars. Mark the entire
inner viewport as blocked on scroll if we have a wheel listener
we don't need to iterate the tree.

BUG=595591
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review URL: https://codereview.chromium.org/1810363002

Cr-Commit-Position: refs/heads/master@{#382053}

Former-commit-id: 8f35ce554d594f2069d7f4515602e3fb6a5fc5a9